# lc_app

./: .gitignore  README.md  justfile  playground.ipynb  pyproject.toml  run.py
data/: dummy_market_data.csv
lc_app/: app.py
lc_app/api/: __init__.py  auth.py  routes.py
lc_app/commands/: __init__.py  ask.py  embed.py  test.py
lc_app/core/: rag.py  utils.py  yf_scraper.py
lc_app/core/scrapers/: ft_scraper.py  models.py  scraper.py  yf_scraper.py
