[project]
name = "lc-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.6",
    "langchain>=0.3.24",
    "langchain-community>=0.3.22",
    "langchain-ollama>=0.3.2",
    "ollama>=0.4.8",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
]

[dependency-groups]
dev = ["ruff>=0.11.6"]
