[project]
name = "lc-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "langchain>=0.3.24",
    "langchain-chroma>=0.2.3",
    "langchain-community>=0.3.22",
    "langchain-ollama>=0.3.2",
    "langfuse>=2.60.3",
    "ollama>=0.4.8",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
]

[project.scripts]
lc-app = "lc_app.app:run"

[dependency-groups]
dev = ["ruff>=0.11.6"]

[tool.pdm.build]
includes = [
    "lc_app",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
