[project]
name = "lc-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "click>=8.1.8",
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "jq>=1.8.0",
    "langchain>=0.3.24",
    "langchain-chroma>=0.2.3",
    "langchain-community>=0.3.22",
    "langchain-ollama>=0.3.2",
    "langchain-text-splitters>=0.3.8",
    "langfuse>=2.60.3",
    "loguru>=0.7.3",
    "ollama>=0.4.8",
    "pandas>=2.2.3",
    "playwright>=1.51.0",
    "pyarrow>=19.0.1",
    "pydantic>=2.11.3",
]

[project.scripts]
lc-app = "lc_app.app:run"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.11.6",
]

[tool.pdm.build]
includes = [
    "lc_app",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
